--- a/HTML/Task3.html
+++ b/HTML/Task3.html
@@ -7,7 +7,7 @@
  <header>
   <img src="/home/qainfotech/html-css/images/qa.jpg" style="width:250px; height:100px;" alt="logo" />
   <button onclick="location.href='/home/qainfotech/html-css/HTML/Task1.html'" style = "float:right;">
-   <img src = "/home/qainfotech/html-css/images/profile.jpeg" style="width:50px; height:50px;  "/><br>
+   <img src = "/home/qainfotech/html-css/images/log.png" style="width:50px; height:50px;  "/><br>
    Logout
   </button>
   <center> <h2> Welcome </h2></center>
