--- a/HTML/Task3.html
+++ b/HTML/Task3.html
@@ -7,7 +7,7 @@
  <header>
   <img src="/home/qainfotech/html-css/images/qa.jpg" style="width:250px; height:100px;" alt="logo" />
   <button onclick="location.href='/home/qainfotech/html-css/HTML/Task1.html'" style = "float:right;">
-   <img src = "/home/qainfotech/html-css/images/log.png" style="width:50px; height:50px;  "/><br>
+   <img src = "/home/qainfotech/html-css/images/profile.jpg" style="width:50px; height:50px;  "/><br>
    Logout
   </button>
   <center> <h2> Welcome </h2></center>
@@ -15,7 +15,7 @@
  <center>
   <div class = "back">
    <div1 class="car">
-    <img src="/home/qainfotech/html-css/images/profile.jpeg" alt="Profile" style="width:100%">
+    <img src="/home/qainfotech/html-css/images/profile.jpg" alt="Profile" style="width:100%">
     <h4><b>John Doe</b></h4>
     <h4>Software Engineer</h4>
    </div1> 
