--- a/HTML/Task1.html
+++ b/HTML/Task1.html
@@ -8,7 +8,7 @@
  <center>
   <h1>Login Page</h1>
   <div>
-   <form action = "home.html" method = "post">
+   <form action = "Task3.html" method = "post">
 	Email-ID:<input type = "email" name = "email" required/></br></br>
 	Password:<input type = "password" name = "password" required/></br></br>
 	<input type = "submit" value = "Login"/>
