--- a/HTML/Task1.html
+++ b/HTML/Task1.html
@@ -14,7 +14,7 @@
 	<input type = "submit" value = "Login"/>
 	<a href = "Task2.html"><button>SignUp</button></a>
    </form>
-   Login Using Facebook<br>
+   <h2>Login Using Facebook</h2><br>
    <a href = "https://www.facebook.com/"><img src = "/home/qainfotech/html-css/facebook.png" style="width:50px; height:50px;"/></a>
   </div>
 </body>
