--- a/HTML/Task2.html
+++ b/HTML/Task2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
  <title>SignUp Page</title>
- <link rel="stylesheet" href="styles.css">
+ <link rel="stylesheet" href="/home/qainfotech/html-css/CSS/styles.css">
 </head>
 <body>
  <img src = "/home/qainfotech/html-css/images/qa.jpg" style="width:250px; height:100px;"/>
