--- a/HTML/Task3.html
+++ b/HTML/Task3.html
@@ -18,7 +18,7 @@
     <img src="/home/qainfotech/html-css/images/profile.jpg" alt="Profile" style="width:100%">
     <h4><b>John Doe</b></h4>
     <h4>Software Engineer</h4>
-   </div1>kjdhfefj 
+   </div1> 
   </div>
  </center>
  <footer>
